updated to improved free text editor

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
-    "angular-froala": "~2.0.3"
+    "angular-froala": "~2.0.3",
+    "textAngular": "~1.4.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
